Changes on css file, hex colors to root aspect.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --bg-one: #0f0f14;
+  --bg-two: #0f0f10;
+  --active: #d2f400;
+  --white: #fff;
+  --gray: #3a3a4d;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,13 +20,13 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to top, #0f0f14, #0f0f10);
-  color: #fff;
+  background: linear-gradient(to top, var(--bg-one), var(--bg-two);
+  color: var(--white);
 }
 
 ::selection {
-  background-color: #d2f400;
-  color: #0f0f14;
+  background-color: var(--active);
+  color: var(--bg-one);
 }
 
 .local {
@@ -29,26 +37,26 @@ html, body {
 
   & label {
     font-size: 0.7rem;
-    color: #3a3a4d;
+    color: var(--gray);
   }
 
   & input {
     padding: 2px;
     border-radius: 5px;
     border: none;
-    background: #0f0f10;
-    color: #ffffff;
+    background: var(--bg-two);
+    color: var(--white);
     font-size: 1rem;
-    outline: #3a3a4d;
+    outline: var(--gray);
   }
 
   & button {
     padding: 10px;
-    background: #d2f400;
+    background: var(--active);
     border-radius: 10px;
     border: none;
     font-weight: 700;
-    color: #0f0f10;
+    color: var(--bg-two);
     cursor: pointer;
   }
 }
@@ -66,7 +74,7 @@ span {
   font-size: 0.6rem;
 
   & a {
-    color: #d2f400;
+    color: var(--active);
     text-decoration: none;
   }
 }
